# gateau-api

./: .coveragerc  .firebaserc  .gitignore  Dockerfile  README.md  cloudbuild.yaml  database.rules.json  firebase.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  versioning.yml
src/gateau_api/: api.py  constants.py  exceptions.py  firebase.py  service.py  types.py
src/gateau_api/common/: get_service.py
src/gateau_api/dependencies/: __init__.py  service.py  user.py
src/gateau_api/game_ram/: cartridge_info.py  carts.py
src/gateau_api/game_ram/pokemon/: constants.py  crystal.py  gold_silver.py  red_blue.py
src/gateau_api/routers/: admin_authed.py  desktop_client.py  firebase_authed.py  unauthed.py  web_app.py
src/gateau_api/scripts/: __init__.py  make_admin.py
tests/: conftest.py
tests/integration/: conftest.py  constants.py  helpers.py  test_api.py  test_service.py
tests/unit/: test_pokemon_crystal.py  test_pokemon_gold_silver.py  test_pokemon_red_blue.py  test_types.py
